--- a/public/css/admin_login.css
+++ b/public/css/admin_login.css
@@ -8,83 +8,79 @@
 {
     height: 100%;
 	width: 100%;
-	background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(/images/2.jpg);
+	background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(/images/p2.jpg);
 	background-position: center;
 	background-size: cover;
 	position: absolute;
 }
-.navigationBar
-{
-    display: flex;
-    align-items: center;
-    padding: 20px;
-    padding-left: 50px;
-    padding-right: 30px;
-    padding-top: 50px;
+.navigationBar {
+	background-color: #000000;
+	opacity: 0.5;
+	display: flex;
+	align-items: center;
+	padding: 10px;
+	padding-left: 50px;
+	padding-right: 10px;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	
 }
-nav
-{
-    flex: 1;
-    text-align: right;
+
+nav {
+	flex: 1;
+	text-align: right;
+	margin-top: 0px;
 }
-nav ul 
-{
-    display: inline-block;
-    list-style: none;
+
+nav ul {
+	display: inline-block;
+	list-style: none;
 }
-nav ul li
-{
-    display: inline-block;
-    margin-right: 70px;
+
+nav ul li {
+	display: inline-block;
+	margin-right: 70px;
+	margin-left: 20px;
 }
-nav ul li a
-{
-    text-decoration: none;
-    font-size: 20px;
-    color: white;
-    font-family: sans-serif;
+
+nav ul li a {
+	text-decoration: none;
+	font-size: 25px;
+	color: rgb(243, 242, 242);
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
-nav ul li button /* useless */
-{
-    font-size: 20px;
-    color: white;
-    outline: none;
-    border: none;
-    background: transparent;
-    cursor: pointer;
-    font-family: sans-serif;
+
+nav ul li button {
+	font-size: 20px;
+	color: rgb(255, 250, 250);
+	outline: none;
+	border: none;
+	background: transparent;
+	cursor: pointer;
+	font-family: sans-serif;
 }
-nav ul li button:hover  /* useless */
-{
-    color: aqua;
+
+nav ul li button:hover
+
+	{
+	color: aqua;
 }
-nav ul li a:hover
-{
-    color: aqua;
+
+nav ul li a:hover {
+	color: aqua;
 }
 a
 {
     text-decoration: none;
-    color: palevioletred;
+    color: rgb(150, 164, 210);
     font-size: 28px;
 }
-.login-page {
-    width: 480px; /* Increased width by 50 pixels */
-    height: 550px;
-    position: relative;
-    margin: 2% auto;
-    margin-top: 100px;
-    background: rgba(0, 0, 0, 0.3);
-    padding: 10px;
-    overflow: hidden;
-    
-    /* Transition for opacity property */
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
-}
+
 #login-form
 {
     display: none;
+	opacity: 0;
+    transition: opacity 0.5s ease-in-out;
 }
 .form-box
 {
@@ -102,7 +98,7 @@ a
 	margin:35px auto;
 	position:relative;
 	box-shadow: 0 0 20px 9px #ff61241f;
-	border-radius: 30px;
+	text-align: center;
 }
 .toggle-btn
 {
@@ -112,15 +108,20 @@ a
 	border:0;
 	outline: none;
 	position: relative;
+	text-align: center;
 }
+button{
+	text-align: center;
+}
+
 #btn
 {
 	top: 0;
 	left:0;
 	position: absolute;
-	width: 110px;
+	width: 220px;
 	height: 100%;
-	background: #F3C693;
+	background: #b48041;
 	border-radius: 30px;
 	transition: .5s;
 }
@@ -181,4 +182,13 @@ span
 {
 	color:white;
 	font-size:20;
+}
+#register
+{
+	left:450px;
+}
+#register input
+{
+	color:white;
+	font-size: 20;
 }
