--- a/public/css/index.css
+++ b/public/css/index.css
@@ -7,3 +7,34 @@
 	background-size: cover;
 	position: absolute;
 }
+
+.plane
+{
+    position: relative;
+    bottom:-260px;
+    scale: 0.80;
+    animation: animatedman 10s linear infinite;
+}
+
+@keyframes animatedman
+{
+    0%
+    {
+        transform: translateX(calc(100% - 100vw));
+    }
+    50%
+    {
+        transform: translateX(calc(100% + 100vw));
+    }
+    50.01%
+    {
+        transform: translateX(calc(100% + 100vw))
+        rotateY(180deg);
+    }
+    100%
+    {
+        transform: translateX(calc(100% - 100vw))
+        rotateY(180deg);
+    }
+
+}
