--- a/public/css/management.css
+++ b/public/css/management.css
@@ -45,3 +45,13 @@ body {
 #purchaseForm button:hover {
     background-color: #0056b3;
 }
+
+.bg
+{
+    height: 100%;
+	width: 100%;
+	background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(/images/p5.jpg);
+	background-position: center;
+	background-size: cover;
+	position: absolute;
+}
